# wavefront-sdk-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: cpr-config.cmake  wavefront-sdk-config.cmake.in
src/: CMakeLists.txt  main.cpp
src/common/: Socket.cpp  SocketException.cpp
src/direct_ingestion/: DirectIngesterService.cpp  DirectIngestionClient.cpp  WavefrontDirectIngestionClient.cpp
src/include/common/: Constants.h  Histogram.h  HistogramGranularity.h  Serializer.h  Socket.h  SocketException.h  TDigest.h  Utils.h  WavefrontSender.h
src/include/direct_ingestion/: DirectIngesterService.h  DirectIngestionClient.h  WavefrontDirectIngestionClient.h
src/include/proxy/: ProxyClient.h  ProxyConnectionHandler.h  WavefrontProxyClient.h
src/proxy/: ProxyClient.cpp  ProxyConnectionHandler.cpp  WavefrontProxyClient.cpp
src/test/: HistogramTest.cpp
